2004-02-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c (do_point): Let sequence of the 6 defined point types be
	the same as in postscript, png and x11.

2004-02-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/plot.c src/win/winmain.c src/win/pgnuplot.c term/win.trm:
	Let gnuplot on Windows accept the '-persist' command line option
	(preferred synonym to '-noend' and '/noend').

2004-02-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw: Missing copy of file VERSION
	into the latexing directory.

2004-02-01  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm term/post.trm term/pdf.trm term/svg.trm: 
	In the rare case of a request to draw a line or polygon-fill with 
	LT_NODRAW or LT_BACKGROUND it makes more sense to set the color to white
	than to black.  The x11 terminal already behaves this way.

2004-01-25  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm docs/gnuplot.doc: Take default font for gdlib terminals
	(png jpeg) from environmental variable GNUPLOT_DEFAULT_GDFONT.

2004-01-20  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/Makefile.in: gnuplot.tex needs to be latexed 3 times (it contains
	multipage toc).

2004-01-19  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.cyg config/makefile.mgw config/makefile.os2: Copy file
	VERSION into the latexing directory (setting TEXINPUTS from within
	Makefile does not portably work).

2004-01-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c src/save.h src/show.c: Consolidate the save and show
	routines for data and function plot styles into a single place.

2004-01-14  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* Makefile.am: Remove superfluous files from LISP_DISTCLEANFILES.

	* docs/Makefile.in: Add $(top_srcdir) to TEXINPUTS. Add installcheck
	target. Fix uninstall-gih and uninstall-info targets.

	* docs/titlepag.tex: Remove path to VERSION file, this is now taken
	care of by TEXINPUTS.
